# ToxiClean-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPACES.md  app.py  cli_demo.py  demo_reward.py  dry_run.py  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  server.py
core/: __init__.py  environment.py  models.py
core/tasks/: __init__.py  contextual.py  spam.py  toxicity.py
directives/: README.md  moderation_classify_text.md
env/: __init__.py  environment.py
env/tasks/: __init__.py  contextual.py  spam.py  toxicity.py
execution/: README.md  __init__.py
execution/moderation/: __init__.py  classify_text.py
execution/utils/: __init__.py  logger.py  rate_limiter.py  validator.py
scripts/: validate-submission.sh
server/: app.py
tests/: conftest.py  test_api.py  test_environment.py  test_graders.py
