[project]
name = "toxiclean-ai"
version = "1.0.0"
description = "OpenEnv RL environment for intelligent content moderation"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "gradio>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
server = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# No asyncio needed for these tests
addopts = "-v --tb=short"
